The navigation icons were not showing up. Fixed it Fix for announcement bleeding out to the next view for wider images.

--- a/apps/Announcements/index.scss
+++ b/apps/Announcements/index.scss
@@ -47,6 +47,7 @@
   .Announcement-visuals > img {
     width: auto;
     height: 100%;
+    max-width: 100%;
   }
 
   .Announcement-content {
@@ -124,7 +125,7 @@
     bottom: 40%;
     right: 0;
     z-index: 999;
-    color: #fff;
+    color: gray;
     opacity: 0.3;
     background-color: white;
     margin-right: 1%;
@@ -136,7 +137,7 @@
     bottom: 40%;
     left: 0;
     z-index: 999;
-    color: #fff;
+    color: gray;
     opacity: 0.3;
     background-color: white;
     margin-left: 1%;
